--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=api
 spring.datasource.url=jdbc:mysql://localhost:3306/vollmed_api
 spring.datasource.username=root
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.password=${DB_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
+
+api.secutiry.token.secret=${JWT_SECRET:12345678}
